--- a/package.json
+++ b/package.json
@@ -21,19 +21,22 @@
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
     "@storybook/addon-links": "^6.5.13",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack4": "^6.5.13",
     "@storybook/manager-webpack4": "^6.5.13",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.25",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.2.5",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
+    "tailwindcss": "^3.2.3",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
