--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "classnames": "^2.3.2",
+    "formik": "^2.2.9"
+  }
 }
