--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider rollup -c",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "cross-env NODE_OPTIONS=--openssl-legacy-provider start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "author": "Nathan MacDonald",
@@ -29,6 +29,8 @@
     "@types/react": "^18.0.25",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
+    "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,12 +42,12 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
+    "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "classnames": "^2.3.2",
-    "cross-env": "^7.0.3",
-    "formik": "^2.2.9"
+    "cross-env": "^7.0.3"
   }
 }
