--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "tailwindcss": "^3.2.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "cross-env": "^7.0.3"
   },
   "peerDependencies": {
     "classnames": "^2.3.2",
@@ -47,7 +48,5 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "dependencies": {
-    "cross-env": "^7.0.3"
-  }
+  "dependencies": {}
 }
